--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Responsive CRT Frame</title>
+    <link rel="stylesheet" href="master.css">
+</head>
+<body>
+    <div class="crt-frame">
+        <div class="crt-screen">
+            <img src="corp.png" class="corp">
+            <div class="terminal-container">
+                <div class="header">
+                    <div class="status-light"></div>
+                    <h1>SYSTEM STATUS: LOCKED</h1>
+                </div>
+                <div class="content">
+                    <p class="warning-text">WARNING: UNAUTHORIZED ACCESS PROHIBITED</p>
+                </div>
+            
+                <div class="action-area">
+                    <a href="index3.html" class="access-btn">BYPASS SECURITY</a>
+                </div>
+            </div>
+            <img src="corp.png" class="corp">
+            <div class="scanlines"></div>
+            </div>
+    </div>
+</body>
+</html>
