--- a/index3.html
+++ b/index3.html
@@ -32,7 +32,7 @@
                     </div>
 
                     <div class="three">
-                        <p>ok but 0r4cl3</p>
+                        <p>ok but 0r4cl3 27.03</p>
                     </div>
 
                     <div class="four">
